@@ -1,4 +1,4 @@
-OpenFst: Release 1.6.8.
+OpenFst: Release 1.6.9.
 
 OpenFst is a library for constructing, combining, optimizing, and searching
 weighted finite-state transducers (FSTs).
