@@ -35,10 +35,10 @@ void Relabel(
   using Label = typename Arc::Label;
   const auto props = fst->Properties(kFstProperties, false);
   // Constructs label-to-label maps.
-  std::unordered_map<Label, Label> input_map;
-  for (auto &ipair : ipairs) input_map[ipair.first] = ipair.second;
-  std::unordered_map<Label, Label> output_map;
-  for (auto &opair : opairs) output_map[opair.first] = opair.second;
+  const std::unordered_map<Label, Label>
+      input_map(ipairs.begin(), ipairs.end());
+  const std::unordered_map<Label, Label>
+      output_map(opairs.begin(), opairs.end());
   for (StateIterator<MutableFst<Arc>> siter(*fst); !siter.Done();
        siter.Next()) {
     for (MutableArcIterator<MutableFst<Arc>> aiter(fst, siter.Value());
@@ -228,26 +228,20 @@ class RelabelFstImpl : public CacheImpl<Arc> {
                  const RelabelFstOptions &opts)
       : CacheImpl<Arc>(opts),
         fst_(fst.Copy()),
-        relabel_input_(false),
-        relabel_output_(false) {
+        input_map_(ipairs.begin(), ipairs.end()),
+        output_map_(opairs.begin(), opairs.end()),
+        relabel_input_(!ipairs.empty()),
+        relabel_output_(!opairs.empty()) {
     SetProperties(RelabelProperties(fst.Properties(kCopyProperties, false)));
     SetType("relabel");
-    // Creates input label map.
-    if (!ipairs.empty()) {
-      for (auto &ipair : ipairs) input_map_[ipair.first] = ipair.second;
-      relabel_input_ = true;
-    }
-    // Creates output label map.
-    if (!opairs.empty()) {
-      for (auto &opair : opairs) output_map_[opair.first] = opair.second;
-      relabel_output_ = true;
-    }
   }
 
-  RelabelFstImpl(const Fst<Arc> &fst, const SymbolTable *old_isymbols,
+  RelabelFstImpl(const Fst<Arc> &fst,
+                 const SymbolTable *old_isymbols,
                  const SymbolTable *new_isymbols,
                  const SymbolTable *old_osymbols,
-                 const SymbolTable *new_osymbols, const RelabelFstOptions &opts)
+                 const SymbolTable *new_osymbols,
+                 const RelabelFstOptions &opts)
       : CacheImpl<Arc>(opts),
         fst_(fst.Copy()),
         relabel_input_(false),
